--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,153 @@
-body {
+*,
+::after,
+::before {
+  box-sizing: border-box;
+  padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+}
+p {
+  font-size: 15px;
+  line-height: 24px;
+  color: #777777;
+  font-weight: normal;
+  margin-bottom: 12px;
+}
+a {
+  text-decoration: none;
+  outline: none;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.sec-btn {
+  height: 60px;
+  display: inline-block;
+  font-size: 15px;
+  line-height: 30px;
+  color: #ffffff;
+  font-weight: 500;
+  text-transform: uppercase;
+  padding: 15px 32px;
+  background: linear-gradient(to right, #ff5066, #fc9d44, #fc9d44, #ff5066);
+  background-size: 400% 100%;
+  background-position: left center;
+  border-radius: 4px;
+  overflow: hidden;
+  position: relative;
+  border: none;
+  outline: none;
+  transition: 0.3s;
+  margin-left: 50%;
+  transform: translateX(-50%);
+}
+.sec-btn:hover {
+  background-position: right center;
+  color: #ffffff;
+}
+
+@media screen and (min-width: 991px) {
+  .sec-btn {
+    margin-left: 0;
+    transform: translateX(0);
+  }
+}
+
+.sub-title {
+  display: block;
+  font-size: 18px;
+  line-height: 28px;
+  color: #ff5066;
+  font-weight: bold;
+  font-family: "Jost", sans-serif;
+  text-transform: uppercase;
+  position: relative;
+  margin-bottom: 10px;
+}
+.h2-title {
+  font-size: 34px;
+  line-height: 44px;
+  font-weight: bold;
+  color: #010f2e;
+  font-family: "Jost", sans-serif;
+  margin-bottom: 30px;
+}
+.h3-title {
+  font-size: 22px;
+  line-height: 32px;
+  color: #010f2e;
+  font-weight: bold;
+  font-family: "Jost", sans-serif;
+  margin-bottom: 12px;
+}
+.h4-title {
+  font-size: 32px;
+  line-height: 42px;
+  color: #010f2e;
+  font-weight: bold;
+  font-family: "jost", sans-serif;
+  margin-bottom: 20px;
+}
+
+.form-box {
+  display: block;
+  position: relative;
+  font-size: 0;
+  line-height: 1;
+  margin-bottom: 20px;
+}
+.form-input {
+  width: 100%;
+  height: 60px;
+  background: #ffffff;
+  font-size: 15px;
+  line-height: 24px;
+  color: #777777;
+  border: none;
+  outline: none;
+  padding: 12px 30px;
+}
+
+@media screen and (min-width: 575px) {
+  .h2-title {
+    font-size: 38px;
+    line-height: 48px;
+    margin-bottom: 30px;
+  }
+  .h4-title {
+    font-size: 35px;
+    line-height: 45px;
+  }
+}
+@media screen and (min-width: 767px) {
+  .sub-title {
+    font-size: 22px;
+    line-height: 28px;
+    margin-bottom: 20px;
+  }
+  .h2-title {
+    font-size: 48px;
+    line-height: 58px;
+  }
+  .h3-title {
+    font-size: 25px;
+    line-height: 35px;
+  }
+  .h4-title {
+    font-size: 40px;
+    line-height: 50px;
+  }
+}
+@media screen and (min-width: 991px) {
+  .h2-title {
+    font-size: 52px;
+    line-height: 62px;
+  }
+  .h4-title {
+    font-size: 50px;
+    line-height: 60px;
+  }
+}
+@media screen and (min-width: 1199px) {
+  .h2-title {
+    font-size: 65px;
+    line-height: 75px;
+  }
 }
