--- a/src/component/experience.css
+++ b/src/component/experience.css
@@ -1,3 +1,86 @@
+.main-experience {
+  position: relative;
+  padding: 60px 0 46px 0;
+  overflow: visible;
+}
+@media screen and (min-width: 767px) {
+  .main-experience {
+    padding: 80px 0 66px 0;
+  }
+}
+@media screen and (min-width: 991px) {
+  .main-experience {
+    padding: 120px 0 113px 0;
+  }
+}
+
 .experience-skills {
   margin-top: 35px;
+}
+.experience-skill-bar-box {
+  position: relative;
+  margin-bottom: 20px;
+}
+.h3-title.experience-skill-bar-title {
+  margin-bottom: 9px;
+}
+.experience-skill-bar-percent {
+  position: absolute;
+  top: 3px;
+  right: 0;
+  margin-bottom: 0;
+}
+.experience-skill-bar {
+  width: 100%;
+  height: 22px;
+  border-radius: 5px;
+  position: relative;
+  overflow: visible;
+}
+.experience-skill-bar:before {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 0;
+  transform: translate(0, -50%);
+  width: 100%;
+  height: 8px;
+  background: #ebebeb;
+  border-radius: 5px;
+}
+.experience-skill-bar-inner {
+  position: absolute;
+  top: 50%;
+  left: 0;
+  transform: translate(0, -50%);
+  width: 0;
+  height: 22px;
+  border-radius: 5px;
+  overflow: visible !important;
+}
+.experience-skill-bar-inner:before {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 0;
+  transform: translate(0, -50%);
+  width: 100%;
+  height: 8px;
+  background: #fc9d44;
+  box-shadow: -6px 6px 30px rgb(252 157 68 / 40%);
+  border-radius: 5px;
+}
+@media screen and (min-width: 991px) {
+  .experience-skill-bar-box {
+    position: relative;
+    margin-bottom: 35px;
+  }
+}
+
+.experience-img {
+  position: relative;
+}
+.experience-img img {
+  vertical-align: middle;
+  width: 100%;
 }
