--- a/src/component/newsLetter.css
+++ b/src/component/newsLetter.css
@@ -32,6 +32,7 @@
   background: #ffffff;
   color: #ff5066;
   margin-top: 30px;
+  transform: translateX(-50%);
 }
 .newsletter-form .sec-btn::before {
   content: "";
