--- a/src/component/servicesC.css
+++ b/src/component/servicesC.css
@@ -96,27 +96,25 @@
   }
 }
 
-.our-service-box::before {
+.our-service-box:before {
   content: "";
-  background: linear-gradient(to right, #ff5066, #fc9d44);
   position: absolute;
-  height: 100%;
-  width: 100%;
-  top: -100%;
+  top: 0;
   left: 0;
-}
-.our-service-box:hover::before {
-  animation: change-position 0.5s linear;
-  animation-fill-mode: forwards;
+  bottom: auto;
+  width: 100%;
+  height: 0;
+  background: linear-gradient(to right, #ff5066, #fc9d44);
+  border-radius: 4px;
+  transition: 0.5s;
+  z-index: 0;
 }
 
-@keyframes change-position {
-  0% {
-    transform: translateY(200%);
-  }
-  100% {
-    transform: translateY(100%);
-  }
+.our-service-box:hover::before {
+  height: 0;
+  bottom: 0;
+  top: auto;
+  height: 100%;
 }
 
 @media screen and (min-width: 575px) {
