--- a/src/index.css
+++ b/src/index.css
@@ -61,6 +61,18 @@ a {
   position: relative;
   margin-bottom: 10px;
 }
+
+.h1-title {
+  text-align: center;
+  font-size: 50px;
+  line-height: 60px;
+  color: #010f2e;
+  font-weight: bold;
+  font-family: "Jost", sans-serif;
+  margin-bottom: 18px;
+  max-width: 640px;
+}
+
 .h2-title {
   font-size: 34px;
   line-height: 44px;
@@ -104,7 +116,12 @@ a {
   outline: none;
   padding: 12px 30px;
 }
-
+@media screen and (max-width: 767px) {
+  .form-input {
+    height: 45px;
+    padding: 12px 20px;
+  }
+}
 @media screen and (min-width: 575px) {
   .h2-title {
     font-size: 38px;
@@ -122,6 +139,10 @@ a {
     line-height: 28px;
     margin-bottom: 20px;
   }
+  .h1-title {
+    font-size: 50px;
+    line-height: 60px;
+  }
   .h2-title {
     font-size: 48px;
     line-height: 58px;
@@ -136,6 +157,10 @@ a {
   }
 }
 @media screen and (min-width: 991px) {
+  .h1-title {
+    font-size: 55px;
+    line-height: 65px;
+  }
   .h2-title {
     font-size: 52px;
     line-height: 62px;
@@ -146,8 +171,114 @@ a {
   }
 }
 @media screen and (min-width: 1199px) {
+  .h1-title {
+    font-size: 57px;
+    line-height: 67px;
+  }
   .h2-title {
     font-size: 65px;
     line-height: 75px;
   }
+}
+@media screen and (min-width: 1279px) {
+  .h1-title {
+    font-size: 68px;
+    line-height: 78px;
+  }
+}
+.back-img {
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+/* pages */
+.main {
+  width: 100%;
+  overflow-x: hidden;
+}
+.main .site-header {
+  background: white;
+}
+.main-banner {
+  position: relative;
+}
+.main-banner.inner-banner {
+  margin-top: 0px;
+  padding: 140px 0;
+  background-size: 1600px;
+  background-position: bottom center;
+}
+@media screen and (min-width: 767px) {
+  .main-banner.inner-banner {
+    padding: 140px 0 200px 0;
+    background-size: 1920px;
+  }
+}
+@media screen and (min-width: 991px) {
+  .main-banner.inner-banner {
+    padding: 210px 0 216px 0;
+  }
+}
+.main-banner.inner-banner .banner-content {
+  text-align: center;
+  padding: 0;
+}
+.main-banner.inner-banner .banner-content .h1-title {
+  color: #ffffff;
+  margin: 0 auto 26px auto;
+}
+.breadcrumb-box {
+  text-align: center;
+}
+.breadcrumb-box ul {
+  font-size: 0;
+  line-height: 1;
+  list-style: none;
+  margin-top: 0;
+  margin-bottom: 1rem;
+}
+.breadcrumb-box ul li:first-child {
+  padding-left: 0;
+  margin-left: 0;
+}
+
+.breadcrumb-box ul li {
+  font-size: 18px;
+  line-height: 28px;
+  color: #ffffff;
+  display: inline-block;
+  padding-left: 24px;
+  margin-left: 14px;
+  position: relative;
+  text-transform: uppercase;
+  font-weight: 500;
+}
+.breadcrumb-box ul li:nth-child(2)::before {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 0;
+  transform: translate(0, -50%);
+  width: 10px;
+  height: 10px;
+  background: #ffffff;
+  border-radius: 50%;
+}
+.breadcrumb-box ul li:first-child {
+  padding-left: 0;
+  margin-left: 0;
+}
+.breadcrumb-box ul li a {
+  text-decoration: none;
+  font-size: 18px;
+  line-height: 28px;
+  color: #ffffff;
+  text-transform: uppercase;
+  font-weight: 500;
+  transition: 0.3s;
+}
+
+.breadcrumb-box ul li a:hover {
+  color: #010f2e;
 }
