--- a/src/component/navBar.css
+++ b/src/component/navBar.css
@@ -61,6 +61,8 @@
   position: relative;
   transition: 0.3s;
 }
+
+.header-menu-items li .active,
 .header-menu-items li a:hover {
   color: #ff5066;
 }
@@ -115,11 +117,12 @@
   position: relative;
   vertical-align: middle;
 }
-.search-icon a {
+.search-icon span {
   display: inline-block;
   font-size: 20px;
   color: #777777;
   transition: 0.3s;
+  cursor: pointer;
 }
 .extra-menu {
   display: inline-block;
@@ -139,8 +142,10 @@
   transition: 0.3s;
   text-decoration: none;
   padding: 15px;
+  cursor: pointer;
 }
-.extra-menu-icon a img {
+
+.extra-menu-icon span img {
   max-width: 100%;
 }
 .extra-menu-icon:hover {
@@ -171,10 +176,6 @@
   transition: 0.3s;
 }
 
-@media screen and (max-width: 575px) {
-}
-@media screen and (max-width: 767px) {
-}
 @media screen and (max-width: 991px) {
   .site-header {
     height: 70px;
@@ -268,4 +269,139 @@
   .header-menu-items li {
     margin: 0 25px;
   }
+}
+/* extra search menu */
+.extra-menu-info {
+  position: fixed;
+  top: 0;
+  right: -400px;
+  width: 400px;
+  height: 100%;
+  background: #ffffff;
+  padding: 40px;
+  text-align: left;
+  overflow: auto;
+  opacity: 0;
+  z-index: 150;
+  transition: 0.5s;
+}
+.extra-menu-info.activeInfo {
+  right: 0;
+  opacity: 1;
+  transition: 0.3s;
+}
+.close-extra-menu {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  width: 30px;
+  height: 30px;
+  cursor: pointer;
+  z-index: 5;
+}
+.close-extra-menu:before,
+.close-extra-menu:after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) rotate(45deg);
+  width: 30px;
+  height: 3px;
+  background: #010f2e;
+  transition: 0.3s;
+}
+.close-extra-menu:after {
+  transform: translate(-50%, -50%) rotate(-45deg);
+}
+.extra-info-text {
+  margin-bottom: 30px;
+}
+.extra-info-logo {
+  margin-bottom: 20px;
+}
+.extra-info-logo img {
+  width: 180px;
+  max-width: 100%;
+  vertical-align: middle;
+}
+.search-input {
+  position: relative;
+  margin: 30px 0;
+}
+.search-input .form-input {
+  height: 60px;
+  padding: 12px 20px;
+  border-radius: 4px;
+  box-shadow: 1px 1px 60px rgb(0 0 0 / 10%);
+}
+.search-input .sec-btn {
+  position: absolute;
+  top: 5px;
+  right: 5px;
+  width: 50px;
+  height: 50px;
+  padding: 0;
+}
+.sec-btn span {
+  position: relative;
+  z-index: 1;
+}
+.search-input .sec-btn span i {
+  margin: 0;
+}
+.extra-info-text ul {
+  padding-left: 0;
+  list-style: none;
+}
+.extra-info-text ul li {
+  font-size: 15px;
+  line-height: 25px;
+  padding-left: 20px;
+  position: relative;
+}
+.extra-info-text ul li:before {
+  content: "";
+  position: absolute;
+  top: 8px;
+  left: 0;
+  width: 8px;
+  height: 8px;
+  background: #fc9d44;
+  border-radius: 50%;
+}
+.extra-info-text .social-icon a {
+  background: #ffffff;
+  color: #fc9d44;
+  box-shadow: 0 0 20px rgb(0 0 0 / 10%);
+  border: 1px solid #fc9d44;
+  width: 41px;
+  height: 41px;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 16px;
+  border-radius: 50%;
+  margin-right: 14px;
+  position: relative;
+  transition: 0.3s;
+}
+.social-icon a::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(to right, #ff5066, #fc9d44);
+  border-radius: 50%;
+  opacity: 0;
+  transition: 0.3s;
+}
+.extra-info-text .social-icon a:hover::before {
+  opacity: 1;
+}
+.extra-info-text .social-icon a:hover .extraLinkIcon {
+  color: #ffffff;
+  z-index: 10;
 }
